libcextract_sources = [
  'ArgvParser.cpp',
  'DscFileGenerator.cpp',
  'ElfCXX.cpp',
  'EnumConstTbl.cpp',
  'Error.cpp',
  'FunctionDepsFinder.cpp',
  'FunctionExternalizeFinder.cpp',
  'IncludeTree.cpp',
  'InlineAnalysis.cpp',
  'IpaClonesParser.cpp',
  'LLVMMisc.cpp',
  'MacroWalker.cpp',
  'NonLLVMMisc.cpp',
  'Passes.cpp',
  'PrettyPrint.cpp',
  'SymbolExternalizer.cpp',
  'SymversParser.cpp',
  'TopLevelASTIterator.cpp',
  'ExpansionPolicy.cpp'
]

libcextract_static = static_library('cextract', libcextract_sources)
